# dr-providers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.depot/workflows/: ci.yml
.github/workflows/: ci.yml
data/audit-corpus/: README.md  manifest.json
data/audit-corpus/gpt-5.5/high/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/gpt-5.5/low/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/gpt-5.5/medium/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/gpt-5.5/minimal/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/gpt-5.5/off/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/gpt-5.5/xhigh/: audit_0.md  audit_1.md  audit_2.md
data/audit-corpus/ground-truth/: analysis.json  analysis.md  canonical_suggestions.json  parsed_audits.json
scripts/: generate_audit_ground_truth.py  hello_world.py  live_test_llm_configs.sh  query_provider.py
src/dr_providers/: __init__.py  cli.py  config.py  names.py
src/dr_providers/query/: __init__.py  errors.py  from_prompt.py  provider_config.py  reasoning.py  request.py  response.py  transport.py  transport_config.py
src/dr_providers/query/providers/: __init__.py  openrouter.py
tests/: test_audit_ground_truth.py  test_from_prompt.py  test_public_api.py  test_reasoning.py  test_request.py  test_response.py  test_transport.py  test_transport_config.py
